# lcurve-rs

./: Cargo.toml  README.md  mkdocs.yml
benches/: gpu_vs_cpu.rs
crates/lcurve-cuda/: Cargo.toml  build.rs
crates/lcurve-cuda/kernels/: flux_kernel.cu
crates/lcurve-cuda/src/: batch.rs  context.rs  error.rs  lib.rs  transfer.rs
crates/lcurve-cuda/tests/: gpu_correctness.rs
docs/api/: index.md
docs/getting-started/: fitting.md  quickstart.md
python/: Cargo.toml  pyproject.toml  test_inject_recover.py
python/lcurve_rs/: __init__.py  fitting.py
python/src/: lib.rs
