[workspace]
members = ["crates/subs", "crates/roche", "crates/lcurve", "crates/lcurve-cuda", "python"]
resolver = "2"

[package]
name = "lroche"
version = "0.1.0"
edition = "2021"
description = "Rust port of Tom Marsh's lcurve white dwarf binary light curve code"

[[bin]]
name = "lroche"
path = "src/main.rs"

[[bin]]
name = "gpu_bench"
path = "benches/gpu_vs_cpu.rs"
required-features = ["cuda"]

[features]
default = []
cuda = ["dep:lcurve-cuda"]

[dependencies]
lcurve = { path = "crates/lcurve" }
lcurve-cuda = { path = "crates/lcurve-cuda", optional = true }
lcurve-roche = { path = "crates/roche" }
lcurve-subs = { path = "crates/subs" }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
approx = "0.5"

[workspace.dependencies]
thiserror = "2"
nalgebra = "0.33"
rayon = "1.10"
approx = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
