[package]
name = "lcurve-rs-python"
version = "0.1.0"
edition = "2021"
description = "Python bindings for lcurve_rs light curve engine"

[lib]
name = "_lcurve_rs"
crate-type = ["cdylib"]

[features]
default = []
cuda = ["dep:lcurve-cuda"]

[dependencies]
lcurve = { path = "../crates/lcurve" }
lcurve-cuda = { path = "../crates/lcurve-cuda", optional = true }
pyo3 = { version = "0.23", features = ["extension-module"] }
numpy = "0.23"
